--- a/app/build.gradle
+++ b/app/build.gradle
@@ -45,6 +45,8 @@ dependencies {
     androidTestImplementation 'androidx.test.ext:junit:1.1.2'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.3.0'
     implementation 'androidx.multidex:multidex:2.0.1'
+    implementation "com.google.firebase:firebase-ads:19.3.0"
+    implementation 'com.facebook.android:audience-network-sdk:5.3.0'
     implementation project(":kermaxdevutils")
 
 }
