--- a/kermaxdevutils/src/main/AndroidManifest.xml
+++ b/kermaxdevutils/src/main/AndroidManifest.xml
@@ -1,22 +1,4 @@
 <?xml version="1.0" encoding="utf-8"?>
-<manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.hdev.kermaxdevutils">
-
-    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
-    <uses-permission android:name="android.permission.INTERNET" />
-
-    <application>
-        <meta-data
-            android:name="com.google.android.gms.ads.AD_MANAGER"
-            android:value="true" />
-        <meta-data
-            android:name="com.google.android.gms.version"
-            android:value="@integer/google_play_services_version" />
-
-        <activity
-            android:name="com.google.android.gms.ads.AdActivity"
-            android:configChanges="keyboard|keyboardHidden|orientation|screenLayout|uiMode|screenSize|smallestScreenSize"
-            android:theme="@android:style/Theme.Translucent" />
-    </application>
+<manifest package="com.hdev.kermaxdevutils">
 
 </manifest>
