--- a/kermaxdevutils/build.gradle
+++ b/kermaxdevutils/build.gradle
@@ -37,6 +37,11 @@ dependencies {
     implementation 'com.squareup.okhttp3:okhttp:3.14.1'
     implementation 'com.squareup.okhttp3:logging-interceptor:3.10.0'
     implementation 'com.amitshekhar.android:android-networking:1.0.2'
+    // This dependency is downloaded from the Google’s Maven repository.
+    // So, make sure you also include that repository in your project's build.gradle file.
+    implementation 'com.google.android.play:core:1.8.0'
+    // For Kotlin users also import the Kotlin extensions library for Play Core:
+    implementation 'com.google.android.play:core-ktx:1.8.1'
     implementation "com.google.firebase:firebase-ads:19.3.0"
     implementation 'com.facebook.android:audience-network-sdk:5.3.0'
 
