--- a/kermaxdevutils/build.gradle
+++ b/kermaxdevutils/build.gradle
@@ -17,6 +17,9 @@ android {
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
         consumerProguardFiles "consumer-rules.pro"
     }
+    androidExtensions {
+        experimental = true
+    }
 
     buildTypes {
         release {
@@ -31,6 +34,8 @@ dependencies {
     implementation "org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version"
     implementation 'androidx.core:core-ktx:1.3.1'
     implementation 'androidx.appcompat:appcompat:1.2.0'
+    implementation "com.google.android.material:material:1.0.0-beta01"
+    implementation 'androidx.legacy:legacy-support-v4:1.0.0'
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'androidx.test.ext:junit:1.1.2'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.3.0'
@@ -42,6 +47,8 @@ dependencies {
     implementation 'com.google.android.play:core:1.8.0'
     // For Kotlin users also import the Kotlin extensions library for Play Core:
     implementation 'com.google.android.play:core-ktx:1.8.1'
+    //sdp
+    implementation 'com.intuit.sdp:sdp-android:1.0.6'
     implementation "com.google.firebase:firebase-ads:19.3.0"
     implementation 'com.facebook.android:audience-network-sdk:5.3.0'
 
